--- a/.github/workflows/frontend-build-test.yml
+++ b/.github/workflows/frontend-build-test.yml
@@ -11,13 +11,11 @@ on:
       - frontend/**.js
 
 jobs:
-  build_test:
+  test:
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         node-version: [18.x, 21.x]
-
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
@@ -30,6 +28,9 @@ jobs:
           npm ci
           npm run build --if-present
           npm test
+  publish:
+    runs-on: ubuntu-latest
+    steps:
       - name: Docker Build and Publish
         uses: elgohr/Publish-Docker-Github-Action@v4
         with:
