--- a/.github/workflows/frontend-build-test.yml
+++ b/.github/workflows/frontend-build-test.yml
@@ -29,6 +29,7 @@ jobs:
           npm run build --if-present
           npm test
   publish:
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -42,4 +43,3 @@ jobs:
           workdir: frontend
           dockerfile: Dockerfile
           tags: latest
-        
