--- a/.github/workflows/frontend-build-test.yml
+++ b/.github/workflows/frontend-build-test.yml
@@ -52,12 +52,11 @@ jobs:
           git config --local user.name "github-actions[bot]"
           git tag ${{ steps.versioning.outputs.version }}
           git commit -m "tag: ${{ steps.versioning.outputs.version }}" --allow-empty
-          git push --tags
-      # - name: Push changes
-      #   uses: ad-m/github-push-action@master
-      #   with:
-      #     force: true
-      #     tags: true
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          force: true
+          tags: true
       - name: Docker Build and Publish
         uses: elgohr/Publish-Docker-Github-Action@v4
         with:
